// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberLT(5) expectTypeFailure(1): TYPE_FAILURE::NumberLT(1) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": "1",
      "expected": [Function],
      "message": "Invalid value \\"1\\" supplied to Number",
      "path": Array [],
    },
  ],
  "value": "1",
}
`;

exports[`NumberLT(5) expectTypeFailure(5): TYPE_FAILURE::NumberLT(5) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 5,
      "expected": [Function],
      "message": "Invalid value 5 supplied to NumberLT",
      "path": Array [],
    },
  ],
  "value": 5,
}
`;

exports[`NumberLT(5) expectTypeFailure(6): TYPE_FAILURE::NumberLT(6) 1`] = `
Struct {
  "errors": Array [
    Struct {
      "actual": 6,
      "expected": [Function],
      "message": "Invalid value 6 supplied to NumberLT",
      "path": Array [],
    },
  ],
  "value": 6,
}
`;
